# commitor

./: LICENSE  README.md  pyproject.toml
commitor/: cli.py  prompt.py
